--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <title>Profile</title>
 
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@1,500&display=swap" rel="stylesheet">
+
     <!-- Favicons -->
     <link href="image/icons/map%20(2).png" rel="icon">
     <link href="image/icons/map%20(1).png" rel="apple-touch-icon">
@@ -71,23 +76,24 @@
                                 <div>
 
                                     <h3>
-                                        <i class="fa-solid fa-user-secret"></i> Watcharapol Phongwilai
+                                        <i class="fa-solid fa-user-secret fa-xl"></i> Watcharapol Phongwilai
                                     </h3>
 
                                     <h3>
-                                        <i class="fa-solid fa-street-view"></i> Street Avenue 90
+                                        <i class="fa-solid fa-street-view fa-xl"></i> Street Avenue 90
                                     </h3>
 
                                     <h3 class="fs-3 fw-bold my-2">
-                                        <i class="fa-brands fa-instagram"></i> <a class="a"
-                                                                                  href="https://www.instagram.com/rushmi0"
-                                                                                  target="_blank"> rushmi0</a>
+                                        <i class="fa-brands fa-instagram fa-xl"></i> <a class="a"
+                                                                                        href="https://www.instagram.com/rushmi0"
+                                                                                        target="_blank"> rushmi0</a>
                                     </h3>
 
                                     <h3 class="fs-3 fw-bold my-2">
-                                        <i class="fa-brands fa-md fa-github ms-2"></i> <a class="a"
-                                                                                          href="https://github.com/rushmi0"
-                                                                                          target="_blank"> GitHub</a>
+                                        <i class="fa-brands fa-md fa-github ms-2 fa-xl"></i> <a class="a"
+                                                                                                href="https://github.com/rushmi0"
+                                                                                                target="_blank">
+                                        GitHub</a>
                                     </h3>
 
                                 </div>
@@ -128,7 +134,7 @@
             <div class="col-lg-4">
                 <div class="features-icons-item mx-auto mb-5 mb-lg-3">
 
-                    <div class="features-icons-icon">
+                    <div class="features-icons-icon rounded">
                         <img src="image/icons/email.png" class="img-fluid rounded">
                     </div>
 
@@ -158,164 +164,240 @@
 
 <!-- About -->
 <br>
-
+<!-- Text block -->
 <section class="showcase" id="About">
-    <div class="row g-0">
+    <div class="container-md">
+        <div class="row g-0">
 
-        <div id="proImg" class="col-sm-6 col-md-6 col-lg-2 mx-auto p-3 order-md-first">
-            <img src="image/items/ts2.jpg" class="img-fluid rounded-circle wm-100">
+            <div class="container-md">
+                <div id="proImg" class="col-sm-6 col-md-6 col-lg-2 mx-auto p-3 order-md-first">
+                    <img src="image/items/ts2.jpg" class="img-fluid rounded-circle wm-100">
+                </div>
+            </div>
+
+
+            <div class="mb-5 mt-3 col-lg-7 mx-auto mb-3 p-3">
+               <div class="container-md">
+                   <h3>ผู้คนในสังคมต่างเป็นทาสของระบบ และผู้ที่ความคุมระบบนั้น คือผู้ที่มีอำนวจควบคุมเงิน</h3>
+                   <br>
+                   <p class="lead mb-0">
+                       ผมเริ่มชื่นชอบประวัติศาสตร์, เศรษฐศาสตร์(สำนักออสเตรียน)
+                       มันเป็นจุดเริ่มต้นที่ทำให้ผมตื่นรู้ความเป็นจริงอันบัดเบี้ยวของโลกนี้ ที่คน 99%
+                       ในโลกยังไม่ตื่นรู้
+                   </p>
+                   <br><br><br>
+                   <h3>ในยุคแรกมนุษย์เราใช้กำลังในการควบคุมคน</h3>
+                   <br>
+                   <p class="lead mb-0">
+                       ใช้แซ่หรือหวายโบยทาสทั้งหลาย ให้มันทำงานตามที่เราสั่ง เราใช้ดาบ ใช้ปืน หรืออาวุธต่าง ๆ
+                       ในการควบคุมคน
+                   </p>
+
+                   <br>
+                   <p class="lead mb-0">
+                       ในยุคถัดมาเมื่อประเทศมีความช่ำชองการควบคุมคนมากยิ่งขึ้น เราเริ่มใช้ "กฎหมาย"
+                       มันถูกใช้ในการควบคุมคน กดขี้ชนชั้นต่าง ๆ แบ่งธุรกิจรายย่อย รายใหญ่ออกมาได้อย่างชัดเจน
+                   </p>
+               </div> <!-- container-md 1 -->
+
+
+                <br><br><br> <!-- continue -->
+
+
+                <div class="container-md">
+                    <h3>"กฎหมาย" กลายเป็นโซ่ตรวน</h3>
+                    <br>
+                    <p class="lead mb-0">
+                        ที่ควบคุมการเติบโตธุรกิจจำนวนมาก
+                        และเทคโนโลยีการความคุมคนมันพัฒนาขึ้นมาเรื่อย ๆ
+                    </p>
+
+                    <br>
+                    <p class="lead mb-0">
+                        จนมาถึงปัจจุบันเรามาใช้เงิน โดยเฉพาะอย่างยิ่ง นโยบายทางการเงิน เป็นเครื่องมือที่ใช้ในการควบคุม
+                        "มนุษย์" ได้ดีที่สุด ... มันมีวิธีทีไหนที่เราจะควบคุมมนุษย์ให้เป็นทาส
+                    </p>
+                </div>  <!-- container-md 2 -->
+
+
+                <br><br><br> <!-- continue -->
+
+
+                <h3>ในยุคสมัยที่ทุกคนเชื่อว่าตนเองมีสิทธิเสรีภาพ</h3>
+                <br>
+                <p class="lead mb-0">
+                    อะไรจะได้ดไปีกว่า การทำให้เงินที่เขาหามาได้ด้วยความยากลำบาก
+                    มันสามารถระเหยได้ทุกวินาที (โคตรเจ๋ง)
+
+                </p>
+                <br>
+
+                <p class="lead mb-0">
+                    คนทำงานหาเงินมาแทบตายเงิรมันระเหยได้ นั้นแปลว่า
+                    "ไอ้โง่นั้นมันต้องทำงานต่อไปเรื่อย ๆ"
+                </p>
+                <br>
+
+                <p class="lead mb-0">
+                    ทำงานต่อไปเรื่อย ๆ โดยที่มันจะไม่มีวัน ที่มันจะมีเงินเก็บพอที่จะ
+                    ปลดตัวเองออกจากระบบการเป็นทาสนี้ได้ เทคโนโลยีการควบคุมมันเปลี่ยนแปลงไป
+                    และทุกวันนี้นโยบายทางการเงิน ก็ยังถูกใช้ในการควบคุม
+                </p>
+
+                <br>
+                <p class="lead mb-0">
+                    การครอบงำทางการเงินก็เป็นการควบคุม ตัดขาประเทศต่าง ๆ การใช้ "การคว่ำบาตร" ต่าง ๆ
+
+                </p>
+
+                <br>
+                <p class="lead mb-0">
+                    เทคโนโลยีการควมคุมในปัจจุบันมัน เจ๋งมาก ๆ เลยครับ และต่าง ๆ ก็ Upgrade เงินของพวกเขากลายเป็น CBDC
+                    เทคโนโลยีการควมคุมอย่างสมบูรณ์แบบ ที่กำลังจะมา
+                </p>
+            </div>
+            <!-- End Text block -->
+
         </div>
-
-        <!-- Text block -->
-        <div class="mb-5 mt-3 col-lg-7 mx-auto mb-3 p-3">
-            <h3>ผู้คนในสังคมต่างเป็นทาสของระบบ และผู้ที่ความคุมระบบนั้น คือผู้ที่มีอำนวจควบคุมเงิน</h3>
-
-            <br>
-
-            <p class="lead mb-0">
-                ผมเริ่มชื่นชอบประวัติศาสตร์, เศรษฐศาสตร์(สำนักออสเตรียน)
-                มันเป็นจุดเริ่มต้นที่ทำให้ผมตื่นรู้ความเป็นจริงอันบัดเบี้ยวของโลกนี้ ที่คน 99%
-                ในโลกยังไม่ตื่นรู้
-            </p>
-
-            <br>
-
-            <h3>ในยุคแรกมนุษย์เราใช้กำลังในการควบคุมคน</h3>
-            <br>
-
-            <p class="lead mb-0">
-                ใช้แซ่หรือหวายโบยทาสทั้งหลาย ให้มันทำงานตามที่เราสั่ง เราใช้ดาบ ใช้ปืน ใช้อาวุธ ในการควบคุมคน
-            </p>
-
-            <br>
-
-            <p class="lead mb-0">
-                ในยุคถัดมาเมื่อประเทศมีความช่ำชองการควบคุมคนมากยิ่งขึ้น เราเริ่มใช้ "กฎหมาย" ..
-                กฎหมายนั้นถูกใช้ในการควบคุมคน กดขี้ชนชั้นต่าง ๆ แบ่งธุรกิจรายย่อย รายใหญ่ออกมาได้อย่างชัดเจน
-
-            </p>
-
-            <br>
-            <p class="lead mb-0">
-                "กฎหมาย" กลายเป็นโซ่ตรวนที่ควบคุม การเติบโตธุรกิจจำนวนมาก และเทคโนโลยีการความคุมคนมันพัฒนาขึ้นมาเรื่อย ๆ
-            </p>
-
-            <br>
-            <p class="lead mb-0">
-                จนมาถึงปัจจุบันเรามาใช้เงิน โดยเฉพาะอย่างยิ่ง นโยบายทางการเงิน เป็นเครื่องมือที่ใช้ในการควบคุม
-                "มนุษย์" ได้ดีที่สุด ... มันมีวิธีทีไหนที่เราจะควบคุมมนุษย์ให้เป็นทาส
-            </p>
-
-            <br>
-            <p class="lead mb-0">
-                ในยุคสมัยที่ทุกคนเชื่อว่าตนเองมีสิทธิเสรีภาพ ได้ดีกว่าการทำให้เงินที่เขาหามาได้ด้วยความยากลำบาก
-                มันสามารถระเหยได้ทุกวินาที (โคตรเจ๋ง) คนทำงานหาเงินมาแทบตายเงิรมันระเหยได้ นั้นแปลว่า
-                "ไอ้โง่นั้นมันต้องทำงานต่อไปเรื่อย ๆ"
-            </p>
-
-            <br>
-            <p class="lead mb-0">
-                ทำงานต่อไปเรื่อย ๆ โดยที่มันจะไม่มีวัน ที่มันจะมีเงินเก็บพอที่จะ
-                ปลดตัวเองออกจากระบบการเป็นทาสนี้ได้ เทคโนโลยีการควบคุมมันเปลี่ยนแปลงไป
-                และทุกวันนี้นโยบายทางการเงิน ก็ยังถูกใช้ในการควบคุม
-            </p>
-
-            <br>
-            <p class="lead mb-0">
-                การครอบงำทางการเงินก็เป็นการควบคุม ตัดขาประเทศต่าง ๆ การใช้ "การคว่ำบาตร"
-                เทคโนโลยีการควมคุมในปัจจุบันมัน เจ๋งมาก ๆ เลยครับ และต่าง ๆ ก็ Upgrade เงินของพวกเขากลายเป็น CBDC
-                เทคโนโลยีการควมคุมอย่างสมบูรณ์แบบ ที่กำลังจะมา
-            </p>
-        </div>
-        <!-- End Text block -->
+        <br><br><br>
+        <hr class=" hr-color border-1 opacity-40">
     </div>
 </section>
 
-
-<br>
-
+<br><br><br>
 
 <!-- Content -->
 <div class="body2">
     <div id="Activities" class="row py-4">
-        <h2 class="text-center tYellow fw-bold">Activities</h2>
+        <h2 class="text-center tYellow fw-bold">My Project</h2>
     </div>
 
-    <div class="container-md text-center ">
+
+    <br><br>
+
+    <div class="container-md text-center">
         <div class="my-auto mx-auto">
-
             <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="image/Bit-Entropy/Desktop%201.png" class="img-fluid rounded " alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="image/Bit-Entropy/Desktop%201.png" class="img-fluid rounded " alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="image/Bit-Entropy/Desktop%201.png" class="img-fluid rounded " alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div> <!--Carousel1 end-->
-            <div class="text-center fs-3 fw-bold my-2">
-                <a href="https://github.com/Emperor13/Bit_Entropy.git">Bit Entropy</a>
-            </div>
 
+                <h3 class="fs-3 fw-bold my-2 mb-5">
+                    <i class="fa-brands fa-md fa-github ms-2 fa-xl"></i> <a class="a"
+                                                                            href="https://github.com/rushmi0/Bit-Entropy"
+                                                                            target="_blank">
+                    Bit Entropy</a>
+                </h3>
+
+                <p class="fs-4">
+                    Bit Entropy หลัก ๆ แล้วเป็น HD Wallet แต่มีของเล่นอื่น ๆ เพิ่มมาด้วย .. หน้าแรกเป็นส่วนของการตั้งต่า
+                    เชื่อมต่อแอพเข้ากับ Bitcoin full node
+                </p>
+
+                <div>
+                    <img src="image/Bit-Entropy/Desktop%201.png" class="img-fluid rounded ">
+                </div>
+
+
+
+
+                <!-- Relation Page -->
+                <div class="mtop">
+                    <p class=" fs-4">
+                        ปุ่ม Wallet จะสร้าง Seed ขึ้นมาและจะเข้าไปที่หน้า Home เพื่อแสดงรายละเอียดต่าง ๆ เช่น Locking
+                        Script รวมไปถึง Master Public, Private Key ในรูปแบบต่าง ๆ
+                    </p>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carousel1" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                    </div>
+
+                    <!-- Image List -->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="image/Bit-Entropy/Wallet/ts1.png" class="img-fluid rounded " alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/Bit-Entropy/Wallet/ts2.png" class="img-fluid rounded " alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/Bit-Entropy/Wallet/ts3.png" class="img-fluid rounded " alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/Bit-Entropy/Wallet/ts4.png" class="img-fluid rounded " alt="...">
+                        </div>
+                    </div>
+
+                    <!-- Button -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
+        <br><br><br><br>
+        <hr class=" hr-color border-1 opacity-40">
     </div>
-</div>
-<!-- End Content -->
+
+</div> <!-- End Content -->
+
+
+
+<br><br><br><br>
 
 
 <h1 align="center" class="mt-5">UTxO คืออะไร</h1><br>
+
+
 <section class="showcase" id="UTxO">
     <div class="container-fluid p-0">
+        <div class="container-md">
+            <!-- page 1 -->
+            <div class="row g-0">
+                <div class="col-lg-6 order-lg-1 text-white showcase-img">
+                    <img src="image/UTxO/ts0.jpg" class="img-fluid rounded ">
+                </div>
+                <!-- Text block -->
+                <div class="col-lg-6 order-lg-2 my-auto showcase-text">
+                    <h2>Bitcoin ใช้รูปแบบการจดบัญชีโดยการใช้ UTxO Model</h2>
+                    <br>
 
-        <!-- page 1 -->
-        <div class="row g-0">
-            <div class="col-lg-6 order-lg-1 text-white showcase-img">
-                <img src="image/UTxO/ts0.jpg" class="img-fluid rounded">
-            </div>
-            <!-- Text block -->
-            <div class="col-lg-6 order-lg-2 my-auto showcase-text">
-                <h2>Bitcoin ใช้รูปแบบการจดบัญชีโดยการใช้ UTxO Model</h2>
-                <br>
-                <p class="lead mb-0">
-                    UTxO (Unspent Transaction Output) คือ เงินที่เรามีอยู่ แต่เรายังไม่ได้ใช้จ่ายเงินนั้นออกไป
-                </p>
+                    <blockquote>
+                        <p class="lead mb-0">
+                            UTxO (Unspent Transaction Output) คือ เงินที่เรามีอยู่ แต่เรายังไม่ได้ใช้จ่ายเงินนั้นออกไป
+                        </p>
 
-                <br> <!-- เว้นบรรทัด -->
+                        <br> <!-- เว้นบรรทัด -->
 
-                <p class="lead mb-0">
-                    Output ของ UTxO หนึ่งเป็นการใช้จ่ายออกไปของคนหนึ่ง แล้วการใช้จ่ายของคนนั้น
-                    จะกลายเป็นรายรับของอีกคนหรือเป็น Input ของอีก UTxO ต่อไป
-                </p>
+                        <p class="lead mb-0">
+                            Output ของ UTxO หนึ่งเป็นการใช้จ่ายออกไปของคนหนึ่ง แล้วการใช้จ่ายของคนนั้น
+                            จะกลายเป็นรายรับของอีกคนหรือเป็น Input ของอีก UTxO ต่อไป
+                        </p>
+                    </blockquote>
+                </div>
             </div>
         </div>
+    </div>
 
+    <br><br><br>
 
-        <!-- page 2 -->
+    <!-- page 2 -->
+    <div class="container-md">
         <div class="row g-0">
             <div class="col-lg-6 order-lg-2 text-white showcase-img">
                 <img src="image/UTxO/ts1.jpg" class="img-fluid rounded">
             </div>
+
             <!-- Text block -->
+
             <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                 <h2>ยกตัวอย่างง่าย ๆ ให้เห็นว่ามันเป็นยังไง</h2>
                 <br>
@@ -335,9 +417,13 @@
                 </p>
             </div>
         </div>
+    </div>
 
 
-        <!-- page 3 -->
+    <br><br><br>
+
+    <!-- page 3 -->
+    <div class="container-md">
         <div class="row g-0">
             <div class="col-lg-6 order-lg-1 text-white showcase-img">
                 <img src="image/UTxO/ts2.jpg" class="img-fluid rounded">
@@ -361,16 +447,20 @@
                 </p>
             </div>
         </div>
+    </div>
 
 
-        <!-- page 4 -->
+    <br><br><br>
+
+    <!-- page 4 -->
+    <div class="container-md">
         <div class="row g-0">
-            <div class="col-lg-6 order-lg-1 text-white showcase-img">
+            <div class="col-lg-6 order-lg-2 text-white showcase-img">
                 <img src="image/UTxO/ts3.jpg" class="img-fluid rounded">
             </div>
 
             <!-- Text block -->
-            <div class="col-lg-6 order-lg-2 my-auto showcase-text">
+            <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                 <h2>คุณสมบัติอีกอย่างของ UTxO</h2>
                 <br>
                 <p class="lead mb-0">
@@ -401,7 +491,6 @@
                 </p>
             </div>
         </div>
-
     </div>
 </section>
 
