--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="image/icons/map%20(2).png" rel="icon">
     <link href="image/icons/map%20(1).png" rel="apple-touch-icon">
 
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link rel="stylesheet" href="style.css" media="screen">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
