--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="p-5 mt-3 rounded-3">
                     <div class="col-md-7 mx-auto"> <!-- offset-md-4, mx-auto -->
                         <h1 class="fw-bold">Contact</h1>
-                        <div class="mt-4 md-3 fs-4">
+                        <div class="mt-4 md-3 fs-5">
 
                             <!-- Content -->
                             <div class="container-md" id="Contact">
@@ -167,7 +167,7 @@
 
 
 <!-- Text block -->
-<section class="showcase" id="About">
+<section class="showcase mtop" id="About">
 
     <div>
         <h1 class="text-center tYellow fw-bold"><i class="fa-solid fa-link"></i> About</h1>
@@ -184,9 +184,9 @@
 
             <div class="mb-5 mt-3 col-lg-7 mx-auto mb-3 p-3">
                 <div class="container-md">
-                    <h3>ผู้คนในสังคมต่างเป็นทาสของระบบ และผู้ที่ความคุมระบบนั้น คือผู้ที่มีอำนวจควบคุมเงิน</h3>
+                    <h3> ผู้คนในสังคมต่างเป็นทาสของระบบ และผู้ที่ความคุมระบบนั้น คือผู้ที่มีอำนวจควบคุมเงิน</h3>
                     <br>
-                    <p class="lead mb-0">
+                    <p class="fs-5">
                         ผมเริ่มชื่นชอบประวัติศาสตร์, เศรษฐศาสตร์(สำนักออสเตรียน)
                         มันเป็นจุดเริ่มต้นที่ทำให้ผมตื่นรู้ความเป็นจริงอันบัดเบี้ยวของโลกนี้ ที่คน 99%
                         ในโลกยังไม่ตื่นรู้
@@ -194,13 +194,13 @@
                     <br><br><br>
                     <h3>ในยุคแรกมนุษย์เราใช้กำลังในการควบคุมคน</h3>
                     <br>
-                    <p class="lead mb-0">
+                    <p class="fs-5">
                         ใช้แซ่หรือหวายโบยทาสทั้งหลาย ให้มันทำงานตามที่เราสั่ง เราใช้ดาบ ใช้ปืน หรืออาวุธต่าง ๆ
                         ในการควบคุมคน
                     </p>
 
                     <br>
-                    <p class="lead mb-0">
+                    <p class="fs-5">
                         ในยุคถัดมาเมื่อประเทศมีความช่ำชองการควบคุมคนมากยิ่งขึ้น เราเริ่มใช้ "กฎหมาย"
                         มันถูกใช้ในการควบคุมคน กดขี้ชนชั้นต่าง ๆ แบ่งธุรกิจรายย่อย รายใหญ่ออกมาได้อย่างชัดเจน
                     </p>
@@ -213,15 +213,15 @@
                 <div class="container-md">
                     <h3>"กฎหมาย" กลายเป็นโซ่ตรวน</h3>
                     <br>
-                    <p class="lead mb-0">
+                    <p class="fs-5">
                         ที่ควบคุมการเติบโตธุรกิจจำนวนมาก
                         และเทคโนโลยีการความคุมคนมันพัฒนาขึ้นมาเรื่อย ๆ
                     </p>
 
                     <br>
-                    <p class="lead mb-0">
-                        จนมาถึงปัจจุบันเรามาใช้เงิน โดยเฉพาะอย่างยิ่ง นโยบายทางการเงิน เป็นเครื่องมือที่ใช้ในการควบคุม
-                        "มนุษย์" ได้ดีที่สุด ... มันมีวิธีทีไหนที่เราจะควบคุมมนุษย์ให้เป็นทาส
+                    <p class="fs-5">
+                        จนมาถึงปัจจุบันเรามาใช้เงิน โดยเฉพาะอย่างยิ่งนโยบายทางการเงิน เป็นเครื่องมือที่ใช้ในการควบคุม
+                        "มนุษย์" ได้ดีที่สุด มันมีวิธีทีไหนที่เราจะควบคุมมนุษย์ให้เป็นทาส
                     </p>
                 </div>  <!-- container-md 2 -->
 
@@ -231,33 +231,37 @@
 
                 <h3>ในยุคสมัยที่ทุกคนเชื่อว่าตนเองมีสิทธิเสรีภาพ</h3>
                 <br>
-                <p class="lead mb-0">
-                    อะไรจะได้ดไปีกว่า การทำให้เงินที่เขาหามาได้ด้วยความยากลำบาก
+                <p class="fs-5">
+                    อะไรจะดีไปกว่า การทำให้เงินที่เขาหามาได้ด้วยความยากลำบาก
                     มันสามารถระเหยได้ทุกวินาที (โคตรเจ๋ง)
 
                 </p>
                 <br>
 
-                <p class="lead mb-0">
+                <p class="fs-5">
                     คนทำงานหาเงินมาแทบตายเงิรมันระเหยได้ นั้นแปลว่า
                     "ไอ้โง่นั้นมันต้องทำงานต่อไปเรื่อย ๆ"
                 </p>
                 <br>
 
-                <p class="lead mb-0">
-                    ทำงานต่อไปเรื่อย ๆ โดยที่มันจะไม่มีวัน ที่มันจะมีเงินเก็บพอที่จะ
-                    ปลดตัวเองออกจากระบบการเป็นทาสนี้ได้ เทคโนโลยีการควบคุมมันเปลี่ยนแปลงไป
+                <p class="fs-5">
+                    ทำงานต่อไปเรื่อย ๆ โดยที่มันจะไม่มีวัน มีเก็บพอที่จะ
+                    ปลดตัวเองออกจากระบบการเป็นทาสนี้ได้
+                </p><br>
+
+                <p class="fs-5">
+                    เทคโนโลยีการควบคุมมันเปลี่ยนแปลงไป
                     และทุกวันนี้นโยบายทางการเงิน ก็ยังถูกใช้ในการควบคุม
                 </p>
 
                 <br>
-                <p class="lead mb-0">
+                <p class="fs-5">
                     การครอบงำทางการเงินก็เป็นการควบคุม ตัดขาประเทศต่าง ๆ การใช้ "การคว่ำบาตร" ต่าง ๆ
 
                 </p>
 
                 <br>
-                <p class="lead mb-0">
+                <p class="fs-5">
                     เทคโนโลยีการควมคุมในปัจจุบันมัน เจ๋งมาก ๆ เลยครับ และต่าง ๆ ก็ Upgrade เงินของพวกเขากลายเป็น CBDC
                     เทคโนโลยีการควมคุมอย่างสมบูรณ์แบบ ที่กำลังจะมา
                 </p>
@@ -273,7 +277,7 @@
 <br><br><br>
 
 
-<div class="container-md">
+<div class="container-md mtop">
     <div id="Activities">
         <h1 class="text-center tYellow fw-bold"><i class="fa-solid fa-link"></i> My Project</h1>
     </div>
@@ -288,7 +292,7 @@
             Bit Entropy</a>
         </h3>
 
-        <p class="fs-4">
+        <p class="fs-5">
             Bit Entropy หลัก ๆ แล้วเป็น HD Wallet แต่มีของเล่นอื่น ๆ เพิ่มมาด้วย .. หน้าแรกเป็นส่วนของการตั้งต่า
             เชื่อมต่อแอพเข้ากับ Bitcoin full node
         </p>
@@ -311,9 +315,9 @@
                 <h3>
                     <i class="fa-solid fa-wallet fa-xl"></i> Wallet ใช้สร้าง Seed
                 </h3><br>
-                <p class=" fs-4">
+                <p class=" fs-5">
                     เมื่อสร้าง Seed แล้วจะเข้าไปที่หน้า Home เพื่อแสดงรายละเอียดต่าง ๆ เช่น Locking
-                    Script รวมไปถึง Master Public, Private Key ในรูปแบบต่าง ๆ
+                    Script รวมไปถึง Master Public,Private Key ในรูปแบบต่าง ๆ
                 </p>
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active"
@@ -369,7 +373,7 @@
                     <h3>
                         <i class="fa-solid fa-file-signature fa-xl"></i> MultiSig ใช้สำหรับสร้าง Smart Contract
                     </h3><br>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         โดยมีเงื่อนไขที่เราต้องระบุว่า การที่จะปลดล็อกเงินออกมานั้น
                         จำเป็นต้องใช้กี่ลายเซ็น เพื่อปลดล็อกเงินออกมาได้
                     </p><br>
@@ -377,7 +381,7 @@
                     <h3>
                         <i class="fa-solid fa-bookmark fa-xl"></i> การใช้งาน เราต้องระบุ 2 อย่าง
                     </h3><br>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         1. ระบุนำนวนลายเซ็นเท่าไหร่ตามต้องการ (น้อยสุด 1 มากสุด 3) สำหรับการปลดล็อก <br>
                         2. จากนั้นระบุ Public Key ที่เราจะใช้ทั้งหมดในเงื่อนไขนี้
                     </p>
@@ -431,18 +435,18 @@
                     <h3>
                         <i class="fa-solid fa-clock fa-xl"></i> Timelocked ใช้สำหรับสร้าง Smart Contract
                     </h3><br>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         Timelock Script เป็น “Smart Contract” ง่าย ๆ ที่ระบุเงื่อนไขการปลดล็อคว่า นอกจากใช้
                         “ลายเซ็นดิจิทัล” (ในตัวอย่างนี้ผมจะใช้ 1 ลายเซ็น)
                     </p><br>
 
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         เพื่อแสดงเจตจำนงในการปลดล็อคเงินแล้ว ต้องรอเวลาผ่านไปตั้งแต่ [n Block ..] เป็นต้นไปที่ระบุไว้
                         จึงจะครบเงื่อนไขสามารถปลดล็อคได้
 
                     </p><br>
 
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         เมื่อ Block ถูกผลิตขึ้นใหม่ไปจนถึงจำนวน [.. n Block]
                         ที่เราระบุไว้ก็จะครบเงื่อนไขสำหรับการปลดล็อค เพื่อป้องกันไม่ให้ เงินที่เก็บไว้ใน Address
                         นั้นถูกใช้ก่อน จนกว่าจะถึงเวลาที่กำหนด
@@ -451,7 +455,7 @@
                     <h3>
                         <i class="fa-solid fa-bookmark fa-xl"></i> การใช้งาน เราต้องระบุ 2 อย่าง
                     </h3>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         1. ระบุ Public Key <br>
                         2. กำหนดหมายเลข Block ที่เราต้องการ
                     </p>
@@ -507,14 +511,14 @@
                     <h3>
                         <i class="fa-solid fa-tower-broadcast fa-xl"></i> Broadcast ใช้สำหรับประกาศธุรกรรม
                     </h3><br>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         เป็นการกาศธุรกรรมของเรา ออกสู่เครือข่าย Bitcoin
                     </p><br>
 
                     <h3>
                         <i class="fa-solid fa-bookmark fa-xl"></i> การใช้งาน เราต้องระบุ 1 อย่าง
                     </h3><br>
-                    <p class=" fs-4">
+                    <p class=" fs-5">
                         1. ป้อนธุรกรรมที่เซ็นแล้ว ที่เข้ารหัสเลขฐาน16
                     </p>
                 </div>
@@ -556,10 +560,10 @@
     </div>
 </div>
 
-<br><br><br><br>
+<br><br>
 
 
-<div id="UTxO">
+<div class="mtop" id="UTxO">
     <h1 class="text-center tYellow fw-bold"><i class="fa-solid fa-link"></i> UTxO คืออะไร</h1>
 </div>
 <br>
@@ -578,13 +582,13 @@
                     <br>
 
                     <blockquote>
-                        <p class="fs-4">
+                        <p class="fs-5">
                             UTxO (Unspent Transaction Output) คือ เงินที่เรามีอยู่ แต่เรายังไม่ได้ใช้จ่ายเงินนั้นออกไป
                         </p>
 
                         <br> <!-- เว้นบรรทัด -->
 
-                        <p class="fs-4">
+                        <p class="fs-5">
                             Output ของ UTxO หนึ่งเป็นการใช้จ่ายออกไปของคนหนึ่ง แล้วการใช้จ่ายของคนนั้น
                             จะกลายเป็นรายรับของอีกคนหรือเป็น Input ของอีก UTxO ต่อไป
                         </p>
@@ -608,7 +612,7 @@
             <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                 <h2>ยกตัวอย่างง่าย ๆ ให้เห็นว่ามันเป็นยังไง</h2>
                 <br>
-                <p class="fs-4">
+                <p class="fs-5">
                     ฟ้ามีเงินอยู่ 1 BTC .. ต้องการจะโอนเงินให้ส้ม 0.5 BTC
                     ฟ้าจะสร้าง ธุรกรรมขึ้นมา ขอเรียกว่า "Tx1" ในขาเข้า UTxO ของฟ้าจะมี 1 BTC
 
@@ -616,7 +620,7 @@
 
                 <br> <!-- เว้นบรรทัด -->
 
-                <p class="fs-4">
+                <p class="fs-5">
                     ขาออกจะมี 2 Output ออกมา จากที่เห็นจะ มีเงินของฟ้าโผล่ออกมาจาก UTxO นี้จำนวน 0.5 BTC
                     เป็นเพราะว่า ฟ้าโอนเงิน 0.5 BTC ให้กับส้ม .. พอฟ้าส่ง 0.5 BTC ให้กับส้มแล้ว
                     ฟ้าจะได้เงินทอนให้ตัวเองกลับมา 0.5 BT
@@ -640,7 +644,7 @@
             <div class="col-lg-6 order-lg-2 my-auto showcase-text">
                 <h2>การใช้จ่ายแบบ UTxO มันเหมือนกับการใช้เงินสด</h2>
                 <br>
-                <p class="fs-4">
+                <p class="fs-5">
                     การใช้เงินแบบ UTxO จะต้องใช้จ่ายเงินทั้งหมดออกไป แล้วจะได้เงินทอนกลับมา (แอป Wallet จะสร้าง
                     Address สำหรับรับเงินทอนเตรียมไว้อยู่แล้ว)
 
@@ -648,7 +652,7 @@
 
                 <br> <!-- เว้นบรรทัด -->
 
-                <p class="fs-4">
+                <p class="fs-5">
                     แบบนี้เราจะเห็นว่าผลรวม UTxO ขาเข้า จะต้องเท่ากับผลรวมของ UTxO ขาออกเสมอ
                     (กรณีตัวอย่างนี้ไม่มีค่า Fee ของจริงจะมี UTxO แตกออกไปเป็นค่า Fee ด้วยครับ)
                 </p>
@@ -670,14 +674,14 @@
             <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                 <h2>คุณสมบัติอีกอย่างของ UTxO</h2>
                 <br>
-                <p class="fs-4">
+                <p class="fs-5">
                     UTxO จะมี Input เท่าไหร่ก็ได้ และมี Output เท่าไหร่ก็ได้ เงินโอนเข้ามา 100 Address แล้วออกมา 200
                     Address ... หรือจะเข้ามา 5 Address ออกมา 5 Address ก็ได้
                 </p>
 
                 <br> <!-- เว้นบรรทัด -->
 
-                <p class="fs-4">
+                <p class="fs-5">
                     แต่ผลรวมของเงินในแต่ละ Address ทั้งขาเข้าและขาออก จะเท่ากันนะ
                     เป็นความสามารถหลอมรวม BTC เป็นหน่วยใหญ่และแตกเป็นหน่วยย่อย ๆ ก็ได้
 
@@ -685,14 +689,14 @@
 
                 <br> <!-- เว้นบรรทัด -->
 
-                <p class="fs-4">
+                <p class="fs-5">
                     การเคลื่อนไหวของเงิน จากมุมมองคนนอกที่มองเข้ามา จะไม่รู้เลยว่าใครเป็นใคร จะเห็นว่ามีเงินจาก
                     Address หนึ่ง โอนเงินไปที่อีก Address หนึ่ง
                 </p>
 
                 <br> <!-- เว้นบรรทัด -->
 
-                <p class="fs-4">
+                <p class="fs-5">
                     Address นั้นอาจเป็นของคนอื่นจริง ๆ หรือเป็นของเจ้าตัวของคนที่โอนเองก็ได้ เพราะเราสามารถสร้าง
                     Address ใหม่ ๆ ออกมารับเงินได้เรื่อย ๆ เลยล่ะ
                 </p>
