--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
                 <div class="mt-3 col-lg-8 mx-auto mb-3 p-3">
                     <div class="container-lg">
-                        <p class="fs-5 mbot">
+                        <p class="fs-5 mbot-sm">
                             Bit Entropy หลัก ๆ แล้วเป็น HD Wallet แต่มีของเล่นอื่น ๆ เพิ่มมาด้วย
                             หน้าแรกเป็นส่วนของการตั้งต่า
                             เชื่อมต่อแอพเข้ากับ Bitcoin full node
@@ -363,7 +363,7 @@
 
                         <div class="mt-3 col-lg-8 mx-auto mb-3 p-3">
                             <div class="container-lg">
-                                <p class=" fs-5 mbot">
+                                <p class=" fs-5 mbot-sm">
                                     เมื่อสร้าง Seed แล้วจะเข้าไปที่หน้า Home เพื่อแสดงรายละเอียดต่าง ๆ เช่น Locking
                                     Script รวมไปถึง Master Public,Private Key ในรูปแบบต่าง ๆ
                                 </p>
@@ -451,7 +451,7 @@
 
                         <div class="mt-3 col-lg-8 mx-auto mb-3 p-3">
                             <div class="container-lg">
-                                <p class=" fs-5 mbot">
+                                <p class=" fs-5 mbot-sm">
                                     1. ระบุนำนวนลายเซ็นเท่าไหร่ตามต้องการ (น้อยสุด 1 มากสุด 3) สำหรับการปลดล็อก <br>
                                     2. จากนั้นระบุ Public Key ที่เราจะใช้ทั้งหมดในเงื่อนไขนี้
                                 </p>
@@ -556,7 +556,7 @@
 
                             <div class="mt-3 col-lg-8 mx-auto mb-3 p-3">
                                 <div class="container-lg">
-                                    <p class=" fs-5 mbot">
+                                    <p class=" fs-5 mbot-sm">
                                         1. ระบุ Public Key <br>
                                         2. กำหนดหมายเลข Block ที่เราต้องการ
                                     </p>
@@ -643,7 +643,7 @@
 
                             <div class="mt-3 col-lg-8 mx-auto mb-3 p-3">
                                 <div class="container-lg">
-                                    <p class=" fs-5 mbot">
+                                    <p class=" fs-5 mbot-sm">
                                         1. ป้อนธุรกรรมที่เซ็นแล้ว ที่เข้ารหัสเลขฐาน16
                                     </p>
                                 </div>
