--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
 
                 <div class="p-5 mt-3 rounded-3">
                     <div class="col-md-7 mx-auto"> <!-- offset-md-4, mx-auto -->
-                        <h1 class="fw-bold">Contact</h1>
+                        <h1 class="fw-bold fs-1">Contact</h1>
                         <div class="mt-4 md-3 fs-5">
 
                             <!-- Content -->
-                            <div class="container-lg" id="Contact">
+                            <div class="container-lg container-md" id="Contact">
                                 <div>
 
-                                    <h3>
+                                    <h3 class="mbot-sa fs-3">
                                         <i class="fa-solid fa-user-secret fa-xl"></i> Watcharapol Phongwilai
                                     </h3>
 
-                                    <h3>
+                                    <h3 class="mbot-sa fs-3">
                                         <i class="fa-solid fa-street-view fa-xl"></i> Street Avenue 90
                                     </h3>
 
-                                    <h3 class="fs-3 fw-bold my-2">
+                                    <h3 class="mbot-sa fs-3 ">
                                         <i class="fa-brands fa-instagram fa-xl"></i> <a class="a"
                                                                                         href="https://www.instagram.com/rushmi0"
                                                                                         target="_blank"> rushmi0</a>
                                     </h3>
 
-                                    <h3 class="fs-3 fw-bold my-2">
+                                    <h3 class="mbot-sa fs-3 ">
                                         <i class="fa-brands fa-md fa-github ms-2 fa-xl"></i> <a class="a"
                                                                                                 href="https://github.com/rushmi0"
                                                                                                 target="_blank">
